--- a/css/about.css
+++ b/css/about.css
@@ -1,20 +1,21 @@
 #about{
     width: 100%;
     height: 700px;
+    background-color: rgb(46, 46, 46);
 }
 
 #h1{
-    margin:40px 0;
+    padding:40px 0;
 }
 
 .block-about{
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(36, 36, 36);
 }
 
 .block-about img{
     width: 300px;
     margin: 20px;
-    border: 10px solid rgb(46, 46, 46);
+    border: 10px solid rgb(65, 65, 65);
 }
 
 .discribe{
