--- a/css/news.css
+++ b/css/news.css
@@ -69,9 +69,10 @@
     text-align: center;
 }
 
-.card{
+.card_{
     margin: 0 auto;
     box-shadow: 2px 2px 10px rgb(24, 24, 24);
+    background-color: rgb(48, 48, 48);
 }
 
 .card-img{
