--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/achiv.css">
-    <link rel="stylesheet" href="css/news.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/bt-teachers.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="shortcut icon" href="img/school.png">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/header.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/achiv.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/news.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/contact.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/about.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bt-teachers.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="shortcut icon" href="{{url_for('static', filename='img/school.png')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="header-content">
                     <h1>СРЕДНЯЯ ОБЩЕОБРАЗОВАТЕЛЬНАЯ ШКОЛА № 9</h1>
-                    <h2 style="color:green">_ _ _ _ _ _ _ _ _ _ _ _ _ _</h2>
+                    <h2 style="color:rgb(68, 163, 68);">_ _ _ _ _ _ _ _ _ _ _ _ _ _</h2>
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sapiente cum eaque! Provident iusto nisi excepturi tempore vel velit. Reprehenderit praesentium reiciendis aperiam? Alias illo pariatur voluptate modi. Dolores, dicta.</h4>
                     <button class="btn-main" style="color:white;" onclick="location.href = '#tables'">Узнать больше</button>
                 </div>
@@ -224,51 +224,45 @@
             <div class="row">
                 <div class="col-4">
                     <div class="circleda">
-                        <img src="img/иконки/group.png" alt="">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
                     <h3 style="text-align: center;">Доска почёта</h3>
                     <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
                 <div class="col-4">
                     <div class="circleda">
-                        <img src="img/иконки/group.png" alt="">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
                     <h3 style="text-align: center;">Доска почёта</h3>
                     <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
                 <div class="col-4">
                     <div class="circleda">
-                        <img src="img/иконки/group.png" alt="">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
                     <h3 style="text-align: center;">Доска почёта</h3>
                     <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
                 <div class="col-4">
-                    <div class="offset">
-                        <div class="circleda">
-                            <img src="img/иконки/group.png" alt="">
-                        </div>
-                        <h3 style="text-align: center;">Доска почёта</h3>
-                        <p style="text-align: center;">Иченики которые учатся</p>
+                    <div class="circleda">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
+                    <h3 style="text-align: center;">Доска почёта</h3>
+                    <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
                 <div class="col-4">
-                    <div class="offset">
-                        <div class="circleda">
-                            <img src="img/иконки/group.png" alt="">
-                        </div>
-                        <h3 style="text-align: center;">Доска почёта</h3>
-                        <p style="text-align: center;">Иченики которые учатся</p>
+                    <div class="circleda">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
+                    <h3 style="text-align: center;">Доска почёта</h3>
+                    <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
                 <div class="col-4">
-                    <div class="offset">
-                        <div class="circleda">
-                            <img src="img/иконки/group.png" alt="">
-                        </div>
-                        <h3 style="text-align: center;">Доска почёта</h3>
-                        <p style="text-align: center;">Иченики которые учатся</p>
+                    <div class="circleda">
+                        <img src="{{url_for('static', filename='img/иконки/group.png')}}">
                     </div>
+                    <h3 style="text-align: center;">Доска почёта</h3>
+                    <p style="text-align: center;">Иченики которые учатся</p>
                 </div>
             </div>
         </div>
@@ -281,7 +275,7 @@
                 <div class="col-lg-4">
                     <div class="card_" style="width: 18rem;">
                         <div class="card-img">
-                            <img src="img/Новости/точка роста/03.jpg" class="card-img-top">
+                            <img src="{{url_for('static', filename='img/Новости/точка роста/03.jpg')}}" class="card-img-top">
                         </div> 
                         <div class="card-body">
                         <h5 class="card-title">Точка роста</h5>
@@ -293,11 +287,11 @@
                 <div class="col-lg-4">
                     <div class="card_" style="width: 18rem;">
                         <div class="card-img">
-                            <img src="img/Новости/Выпускной/01.jpg" class="card-img-top">
-                        </div>
+                            <img src="{{url_for('static', filename='img/Новости/точка роста/03.jpg')}}" class="card-img-top">
+                        </div> 
                         <div class="card-body">
-                        <h5 class="card-title">Выпускной</h5>
-                        <p class="card-text">22 мая для учащихся 9 и 11 классов прозвенел последний звонок!</p>
+                        <h5 class="card-title">Точка роста</h5>
+                        <p class="card-text">специальные образовательные центры, создаваемые на базе школ в селах и малых городах. Их открытие предусмотрено федеральным проектом ...</p>
                         <a href="#" class="btn" style="background-color: rgb(68, 163, 68); color:white;">Подробнее</a>
                         </div>
                     </div>
@@ -305,12 +299,12 @@
                 <div class="col-lg-4">
                     <div class="card_" style="width: 18rem;">
                         <div class="card-img">
-                            <img src="img/Новости/Последний звонок/01.jpg" class="card-img-top">
-                        </div>
+                            <img src="{{url_for('static', filename='img/Новости/точка роста/03.jpg')}}" class="card-img-top">
+                        </div> 
                         <div class="card-body">
-                        <h5 class="card-title">Последний звонок</h5>
-                        <p class="card-text">29 мая ученики 4-х классов простились с начальной школой!</p>
-                        <a href="#" class="btn" style="background-color: rgb(68, 163, 68); color:white;">Подробней</a>
+                        <h5 class="card-title">Точка роста</h5>
+                        <p class="card-text">специальные образовательные центры, создаваемые на базе школ в селах и малых городах. Их открытие предусмотрено федеральным проектом ...</p>
+                        <a href="#" class="btn" style="background-color: rgb(68, 163, 68); color:white;">Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -332,7 +326,7 @@
                       <div class="carousel-item active">
                         <div class="row">
                             <div class="col-4">
-                            <img src="./img/учителя/01.jpg" alt="">
+                            <img src="{{url_for('static', filename='img/учителя/01.jpg')}}">
                             </div>
                             <div class="col-8">
                                 <div class="discribe">
@@ -343,10 +337,10 @@
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item active">
                         <div class="row">
                             <div class="col-4">
-                            <img src="./img/учителя/01.jpg" alt="">
+                            <img src="{{url_for('static', filename='img/учителя/01.jpg')}}">
                             </div>
                             <div class="col-8">
                                 <div class="discribe">
@@ -357,10 +351,10 @@
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item active">
                         <div class="row">
                             <div class="col-4">
-                            <img src="./img/учителя/01.jpg" alt="">
+                            <img src="{{url_for('static', filename='img/учителя/01.jpg')}}">
                             </div>
                             <div class="col-8">
                                 <div class="discribe">
@@ -407,10 +401,10 @@
                     </div>
                     <div id="social" style="margin-left: 20px;">
                         <h5>Мы с социальных сетях</h5>
-                        <a href="https://vk.com/share.php?url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"><img src="img/иконки/vk.png"></a>
-                        <a href="https://www.instagram.com/school9_aldan/"> <img src="img/иконки/instagram.png"></a>
-                        <a href="https://www.facebook.com/sharer.php?src=sp&u=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"> <img src="img/иконки/facebook.png"></a>
-                        <a href="https://twitter.com/intent/tweet?text=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&utm_source=share2"> <img src="img/иконки/twitter.png"></a>
+                        <a href="https://vk.com/share.php?url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"><img src="{{url_for('static', filename='img/иконки/vk.png')}}"></a>
+                        <a href="https://www.instagram.com/school9_aldan/"> <img src="{{url_for('static', filename='img/иконки/instagram.png')}}"></a>
+                        <a href="https://www.facebook.com/sharer.php?src=sp&u=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"> <img src="{{url_for('static', filename='img/иконки/facebook.png')}}"></a>
+                        <a href="https://twitter.com/intent/tweet?text=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&utm_source=share2"> <img src="{{url_for('static', filename='img/иконки/twitter.png')}}"></a>
                     </div>
                 </div>
             </div>
