--- a/templates/index.html
+++ b/templates/index.html
@@ -226,21 +226,21 @@
                         <img src="{{url_for('static', filename='img/icons/group.png')}}">
                     </div>
                     <h3 style="text-align: center;">Доска почёта</h3>
-                    <p style="text-align: center;">Иченики которые учатся</p>
+                    <p style="text-align: center;">ученики которые учатся</p>
                 </div>
                 <div class="col-4">
                     <div class="circleda">
-                        <img src="{{url_for('static', filename='img/icons/group.png')}}">
+                        <img src="{{url_for('static', filename='img/icons/galleryw.png')}}">
                     </div>
-                    <h3 style="text-align: center;">Доска почёта</h3>
-                    <p style="text-align: center;">Иченики которые учатся</p>
+                    <h3 style="text-align: center;">Галерея</h3>
+                    <p style="text-align: center;">фотографии школы</p>
                 </div>
                 <div class="col-4">
                     <div class="circleda">
-                        <img src="{{url_for('static', filename='img/icons/group.png')}}">
+                        <img src="{{url_for('static', filename='img/icons/achivments.png')}}">
                     </div>
-                    <h3 style="text-align: center;">Доска почёта</h3>
-                    <p style="text-align: center;">Иченики которые учатся</p>
+                    <h3 style="text-align: center;">Наши достижения</h3>
+                    <p style="text-align: center;">достижения школы</p>
                 </div>
                 <div class="col-4">
                     <div class="circleda">
