--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,11 +1,23 @@
 #contact{
     width: 100%;
-    height: 600px;
+    min-height: 600px;
     background-color: rgb(68, 163, 68);
 }
 
+#header-contact{
+    text-align: center;
+    padding-bottom: 50px;
+    color: white;
+}
+
+/* #block-map{
+    height: 494px;
+} */
+
 #map{
-    border: 10px solid rgb(32, 32, 32);
+    width: 400;
+    margin: auto 0;
+    border: 10px solid rgb(47, 47, 47);
     box-shadow: 2px 2px 10px black;
     overflow: hidden;
 }
