--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,62 +1,125 @@
-header{
-    position: relative;
-    background-image: url("../img/school.jpg");
-    min-height: 700px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
-    background-attachment: fixed;
+@media screen and (max-height: 1080px){
+    header{
+        height: 910px;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0.465);
+        background-image: url("../img/school.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 0;
+        background-attachment: fixed;
+        background-blend-mode: multiply;
+    }
 }
 
-header .row{
-    min-height: 500px;
-    display: flex;
-    align-items: center;
+@media screen and (max-height: 720px){
+    header{
+        height: 700px;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0.465);
+        background-image: url("../img/school.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 0;
+        background-attachment: fixed;
+        background-blend-mode: multiply;
+    }
 }
 
-.header-content{
-    position: relative;
-    top: 100px;
-    text-align: center;
-    color: white;
-    opacity: .9;
-    z-index: 1;
+@media screen and (max-width: 1920px) {
+    .header-content{
+        height: 354px;
+        position: relative;
+        top: 50%;
+        transform: translate(0, -50%);
+        color: white;
+        opacity: .9;
+        z-index: 1;
+        text-align: center;
+    }
+
+    .header-content h1{
+        font-size: 50px;
+        font-weight: 700;
+    }
+
+    .header-content h2{
+        font-size: 50px;
+        color:rgb(68, 163, 68);
+    }
+    
+    .header-content h4{
+        width: 1200px;
+        margin: 0 auto;
+        font-size: 26px;
+        font-weight: 400;
+        margin-bottom: 35px;
+        opacity: .9;
+    }
+
+    .btn-main{
+        padding: 10px 35px;
+        margin-top: 50px;
+        border: none;
+        border-radius: 5px;
+        font-size: 18px;
+        font-weight: 700;
+        background-color: rgb(68, 163, 68);
+        transition: all .3s ease;
+        transform: scale(1.1);
+    }
+    
+    .btn-main:hover{
+        box-shadow: 0 0 10px rgb(68, 163, 68);
+        transform: scale(1.17)
+    }
 }
 
-.header-content h1{
-    font-size: 50px;
-    font-weight: 700;
-}
+@media screen and (max-width: 1280px) {
+    .header-content{
+        height: 354px;
+        position: relative;
+        top: 50%;
+        transform: translate(0, -50%);
+        color: white;
+        opacity: .9;
+        z-index: 1;
+        text-align: center;
+    }
 
-.header-content h4{
-    font-size: 26px;
-    font-weight: 400;
-    margin-bottom: 35px;
-    opacity: .9;
-}
+    .header-content h1{
+        font-size: 30px;
+        font-weight: 700;
+        margin: 0;
+    }
 
-.overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,.6);
-}
+    .header-content h2{
+        font-size: 30px;
+        color:rgb(68, 163, 68);
+    }
+    
+    .header-content h4{
+        width: 700px;
+        margin: 0 auto;
+        font-size: 18px;
+        font-weight: 400;
+        margin-bottom: 35px;
+        opacity: .9;
+    }
 
-.btn-main{
-    padding: 10px 35px;
-    margin-top: 50px;
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    font-weight: 700;
-    background-color: rgb(68, 163, 68);
-    transition: all .3s ease;
-    transform: scale(1.1);
-}
-
-.btn-main:hover{
-    box-shadow: 0 0 10px rgb(68, 163, 68);
-    transform: scale(1.17)
+    .btn-main{
+        border: none;
+        margin-top: 20px;
+        border-radius: 5px;
+        font-size: 18px;
+        font-weight: 700;
+        background-color: rgb(68, 163, 68);
+        transition: all .3s ease;
+        transform: scale(0.9);
+    }
+    
+    .btn-main:hover{
+        box-shadow: 0 0 10px rgb(68, 163, 68);
+        transform: scale(0.95)
+    }
 }
