--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,5 @@
 :root{
-    --black: rgb(27, 27, 27);
-    --dark: rgb(36, 36, 36);
-    --gray: rgb(68, 68, 68);
-    --white: #fff;
+    --green: rgb(68, 163, 68);
 }
 
 body{
@@ -10,34 +7,52 @@ body{
     margin: 0;
 }
 
-.line{
-    background-color: rgb(190, 190, 190);
+#bg-white{
+    background-color: #fff;
+}
+
+.white{
+    color: #fff;
+}
+
+#bg-green{
+    background-color: var(--green);
+}
+
+.main-test-div{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:row;
+}
+
+table{
+    border: 2px solid black;
+}
+
+
+.test-div{
+    width: 300px;
+    margin: 10px 10px;
+    height: 300px;
+    background-color: black;
+}
+
+.free-space{
     width: 100%;
-    height: 6px;
-    border-radius: 10px;
-    margin: 10px auto;
+    height: 60px;
 }
 
-#sas{
-    color:white;
-}
-
-h1, h2, h3, h4, h5, p{
-    color: rgb(228, 228, 228);
-}
-
-#content{
+.fs-top{
     width: 100%;
-    height: 100%;
-    background: #000;
+    height: 70px;
 }
 
-.headers{
-    text-decoration: none;
-    color: black;
-    transition: all 0.15s ease-in-out;
-}
+.text-white{color: #fff;}
+.text-black{color: black;}
+.text-center{text-align: center;}
 
-.headers:hover{
-    color: rgb(255, 95, 95);
+.transition{
+    width: 100%;
+    height: 10px;
+    background-color: rgb(22, 22, 22);
 }
